--- a/dicee.html
+++ b/dicee.html
@@ -14,12 +14,16 @@
 
       <div class="dice">
         <p id="p">Player 1</p>
+        <input type="text" id="player1" placeholder="Player 1 name....">
+        <button type="submit" id="sub1">Insert name</button>
         <img class="img1" src="images/dice6.png" alt="dice">
         <button id="pl1" >🎲 dice 1</button>
       </div>
 
       <div class="dice">
         <p id="p2" >Player 2</p>
+        <input type="text" id="player2" placeholder="Player 2 name....">
+        <button type="submit" id="sub2">Insert name</button>
         <img class="img2" src="images/dice6.png" alt="dice">
         <button id="pl2">🎲 dice 2</button>
       </div>
